--- a/.gitignore
+++ b/.gitignore
@@ -8,12 +8,9 @@ pnpm-debug.log*
 lerna-debug.log*
 
 node_modules
+dist
 dist-ssr
 *.local
-
-# Configs
-vite.config.js
-tsconfig.json
 
 # Locks
 pnpm-lock.yaml
