--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
-  "name": "multi-thread-pools",
-  "version": "0.5.0",
+  "name": "multithreading",
+  "version": "0.6.0",
   "author": "Artur Papikian",
   "license": "MIT",
   "description": "Light and easy JS tool for accessing multiple threads via web workers.",
-
   "main": "./dist/index.js",
   "module": "./dist/index.mjs",
   "types": "./dist/index.d.ts",
@@ -25,8 +24,7 @@
     "url": "git+https://github.com/ArturNiko/multithread-js.git"
   },
   "devDependencies": {
-    "typescript": "^5.0.2",
-    "vite": "^4.2.0"
+    "vite": "^4.2.1"
   },
   "keywords": [
     "multithreading",
@@ -35,6 +33,11 @@
     "workers",
     "pools",
     "typescript",
-    "ts"
-  ]
+    "ts",
+    "javascript",
+    "js"
+  ],
+  "dependencies": {
+    "typescript": "^5.0.3"
+  }
 }
