package rename hotfix

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "multithreading",
+  "name": "@a4turp/multithreading",
   "version": "0.6.0",
   "author": "Artur Papikian",
   "license": "MIT",
