--- a/.npmignore
+++ b/.npmignore
@@ -9,12 +9,14 @@ lerna-debug.log*
 
 node_modules
 assets
+.github
 src
 dist-ssr
 *.local
 
 # Configs
 vite.config.js
+jest.config.js
 tsconfig.json
 
 # Locks
