--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -18,10 +18,15 @@ jobs:
     steps:
       - name: 📚 checkout
         uses: actions/checkout@v3
+      - name: pnpm
+        uses: pnpm/action-setup@v2
+        with:
+          version: latest
       - name: 🟢 node
         uses: actions/setup-node@v3
         with:
           node-version: 18.*
+          cache: pnpm
       - name: ⬇️ install
         run: pnpm ci
       - name: 🏗️ build
