--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "happy-dom": "^9.7.1",
     "jest": "^29.5.0",
     "jest-environment-jsdom": "^29.5.0",
+    "tsup": "^6.7.0",
     "typescript": "^5.0.4",
     "vite": "^4.2.1",
     "vitest": "^0.30.1"
